--- a/home.html
+++ b/home.html
@@ -11,10 +11,10 @@
 </head>
 <body>
 <header class="header">
-    <a href="home.html" class="logo"> NIKE </a>
+    <a href="index.html" class="logo"> NIKE </a>
     <nav class="navbar">
         <ul>
-            <li><a href="home.html">home</a></li>
+            <li><a href="index.html">home</a></li>
             <li><a href="products.html">products</a></li>
             <li><a href="#">pages +</a>
                 <ul>
@@ -40,7 +40,7 @@
         <label for="search-box" class="fas fa-search"></label>
     </form>
 </header>
-<section class="home">
+<section class="index">
     <div class="slide active" style="background: url(https://www.planetsports.asia/media/catalog/category/1920x565-non-CTA_6.jpg) no-repeat;">
         <div class="content">
             <span>protect your eyes</span>
