--- a/about.html
+++ b/about.html
@@ -12,10 +12,10 @@
 </head>
 <body>
 <header class="header">
-    <a href="home.html" class="logo"> NIKE </a>
+    <a href="index.html" class="logo"> NIKE </a>
     <nav class="navbar">
         <ul>
-            <li><a href="home.html">home</a></li>
+            <li><a href="index.html">home</a></li>
             <li><a href="products.html">products</a></li>
             <li><a href="#">pages +</a>
                 <ul>
@@ -44,7 +44,7 @@
 
 <section class="heading">
     <h1>about us</h1>
-    <p> <a href="home.html">home</a> >> about </p>
+    <p> <a href="index.html">home</a> >> about </p>
 </section>
 
 <section class="about">
@@ -86,7 +86,7 @@
     <div class="box-container">
         <div class="box">
             <h3>quick links</h3>
-            <a href="home.html"> <i class="fas fa-angle-right"></i> home</a>
+            <a href="index.html"> <i class="fas fa-angle-right"></i> home</a>
             <a href="products.html"> <i class="fas fa-angle-right"></i> products</a>
             <a href="about.html"> <i class="fas fa-angle-right"></i> about</a>
             <a href="contact.html"> <i class="fas fa-angle-right"></i> contact</a>
