--- a/login.html
+++ b/login.html
@@ -11,10 +11,10 @@
 </head>
 <body>
 <header class="header">
-    <a href="home.html" class="logo"> NIKE </a>
+    <a href="index.html" class="logo"> NIKE </a>
     <nav class="navbar">
         <ul>
-            <li><a href="home.html">home</a></li>
+            <li><a href="index.html">home</a></li>
             <li><a href="products.html">products</a></li>
             <li><a href="#">pages +</a>
                 <ul>
@@ -42,7 +42,7 @@
 </header>
 <section class="heading">
     <h1>account</h1>
-    <p> <a href="home.html">home</a> >> login </p>
+    <p> <a href="index.html">home</a> >> login </p>
 </section>
 <section class="login-form">
     <form action="">
