--- a/register.html
+++ b/register.html
@@ -11,10 +11,10 @@
 </head>
 <body>
 <header class="header">
-    <a href="home.html" class="logo"> NIKE </a>
+    <a href="index.html" class="logo"> NIKE </a>
     <nav class="navbar">
         <ul>
-            <li><a href="home.html">home</a></li>
+            <li><a href="index.html">home</a></li>
             <li><a href="products.html">products</a></li>
             <li><a href="#">pages +</a>
                 <ul>
@@ -42,7 +42,7 @@
 </header>
 <section class="heading">
     <h1>account</h1>
-    <p> <a href="home.html">home</a> >> register </p>
+    <p> <a href="index.html">home</a> >> register </p>
 </section>
 <section class="register-form">
     <form action="">
@@ -71,7 +71,7 @@
     <div class="box-container">
         <div class="box">
             <h3>quick links</h3>
-            <a href="home.html"> <i class="fas fa-angle-right"></i> home</a>
+            <a href="index.html"> <i class="fas fa-angle-right"></i> home</a>
             <a href="products.html"> <i class="fas fa-angle-right"></i> products</a>
             <a href="about.html"> <i class="fas fa-angle-right"></i> about</a>
             <a href="contact.html"> <i class="fas fa-angle-right"></i> contact</a>
