--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <label for="search-box" class="fas fa-search"></label>
     </form>
 </header>
-<section class="index">
+<section class="home">
     <div class="slide active" style="background: url(https://www.planetsports.asia/media/catalog/category/1920x565-non-CTA_6.jpg) no-repeat;">
         <div class="content">
             <span>protect your eyes</span>
